# wobj

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md
assets/: cube.mtl
examples/: print.rs  viewer.rs
src/: error.rs  lib.rs  main.rs  mtl.rs  obj.rs  util.rs
src/mtl/: mod.rs  parser.rs
