[package]
name = "wobj"
version = "0.1.0"
edition = "2024"

[dependencies]
ahash = { version = "0.8.12", optional = true }
indexmap = { version = "2.13.0", optional = true }
smallvec = "1.15.1"
winnow = "0.7.14"

[dev-dependencies]
kiss3d = "0.40.0"

[features]
default = ["trimesh"]
trimesh = ["dep:ahash", "dep:indexmap"]
